src/App.css
.app,
#root,
html,
body {
  background-color: #f5f4f5;
  height: 100%;
}

footer {
    margin: auto;
    margin-top: 15px;
    text-align: center;
    font-size: 11px;
}

.app-container{
  margin-left: 2%;
  margin-right: 2%;
  margin-top: 20px;
  padding-bottom: 30px;
}

.calculator-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.calculator-pkm-resume {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

@media (max-width: 768px) {
  .calculator-pkm-resume{
    flex-direction: column;
  }
}

.calculator-pkm-resume-table {
  margin: 10px;
  padding: 10px;
}

.pkm-iv-table{
  width: 520px;
}

.form-calculator > div{
  display: flex;
  flex-direction: row;
  align-items: center;
  flex-wrap: wrap;
  justify-content: center;
  margin-left: 1%;
  margin-right: 1%;
}

@media (max-width: 768px) {
  .form-calculator > div{
    flex-direction: column;
  }
}

.pkm-list {
  flex-direction: row;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

.pkm-list-item {
  position: relative;
  display: flex;
  max-width: 230px;
  align-items: center;
  justify-content: center;
  margin: 10px;
}

.pkm-list-item-body {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-bottom: 8px;
}

.pkm-list-item-remove{
  position: absolute;
  z-index: 9999;
  top: -15px;
  right: -5px;
}

.pkm-list-item-rank{
  position: absolute;
  z-index: 1;
  top: 8px;
  right: 8px;
  font-size: 45px;
  font-weight: bolder;
  opacity: 0.2;
  width: 50px;
  height: 50px;
  text-align: center;
  transform: rotate(-30deg);
  border: 5px solid black;
  border-radius: 100px;
}

.pkm-list-item-rank-a,
.pkm-list-item-rank-b{
  color: green;
  border-color: green;
}

.pkm-list-item-rank-c,
.pkm-list-item-rank-d{
  color: orange;
  border-color: orange;
}

.pkm-list-item-rank-e,
.pkm-list-item-rank-f{
  color: red;
  border-color: red;
}

@media (max-width: 768px) {
  .pkm-list {
    justify-content: space-around;
  }

  .pkm-list-item {
    max-width: 320px;
    width: 90%;
  }
}

.egg-chart-slide{
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  padding: 10px;
  min-height: 150px;
}

@media (max-width: 768px) {
  .egg-chart-slide{
    min-height: 320px;
  }
}

.candy-calculator-resume {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

@media (max-width: 768px) {
  .candy-calculator-resume{
    flex-direction: column;
  }
}

.instructions li {
  list-style: square;
  margin-left: 15px;
  margin-bottom: 8px;
}

